Modified breakpoint for '#restaurant-img' to ensure that image isn't too large at at highest viewport width.

--- a/css/styles.css
+++ b/css/styles.css
@@ -248,9 +248,9 @@ nav h1 a {
   }
 }
 
-@media screen and (min-width: 850px) {
+@media screen and (min-width: 950px) {
   #restaurant-img {
-    width: 65vw;
+    width: 60vw;
   }
 }
 
